[project]
name = "my_flet_app"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "flet==0.25.1",
  "groq==0.13.0"
]

[tool.flet]
org = "com.mycompany"
product = "my_flet_app"
company = "Flet"
copyright = "Copyright (C) 2024 by Flet"

[tool.flet.app]
path = "src"